--- a/index.html
+++ b/index.html
@@ -55,10 +55,58 @@
             >
           </li>
         </ul>
+        <div class="container mobile__container">
+          <button class="burger__menu" aria-expanded="false" data-menu-button>
+            <svg width="40px" height="40px">
+              <use href="./images/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
+          <div class="mobile" data-menu>
+            <button>
+              <svg width="40px" height="40px">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+            <ul class="mobile__list list">
+              <li class="nav__item">
+                <a href="./index.html" class="link current nav__link">Студія</a>
+              </li>
+              <li class="nav__item">
+                <a href="./portfolio.html" class="link nav__link">Портфоліо</a>
+              </li>
+              <li class="nav__item">
+                <a href="./index.html" class="link nav__link">Контакти</a>
+              </li>
+            </ul>
+
+            <ul class="mobile__list list">
+              <li class="contact__item">
+                <a class="contact__link" href="mailto:info@devstudio.com"
+                  ><svg class="contact__icon" width="16px" height="12px">
+                    <use href="./images/icons.svg#icon-envelope"></use></svg
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contact__item">
+                <a class="contact__link" href="tel:+380961111111"
+                  ><svg class="contact__icon" width="10px" height="16px">
+                    <use href="./images/icons.svg#icon-mob"></use></svg
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+            <ul>
+              <li class="list"><a class="link" href="">Instagram</a></li>
+              <li class="list"><a class="link" href="">Twitter</a></li>
+              <li class="list"><a class="link" href="">Facebook</a></li>
+              <li class="list"><a class="link" href="">LinkedIn</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <!-- шапка  -->
-    <main>
+    <!-- <main>
       <section class="hero overlay">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -139,8 +187,8 @@
         </div>
       </section>
 
-      <!-- особливості 2  -->
-      <section class="section">
+      особливості 2 
+       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="feature__list list">
@@ -192,10 +240,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!-- чим ми займаємось 3-->
-      <section class="section section__sidebar">
+    <!-- чим ми займаємось 3-->
+    <!-- <section class="section section__sidebar">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="list image__list">
@@ -219,9 +267,9 @@
             </li>
           </ul>
         </div>
-      </section>
-      <!-- наша команда 4 -->
-      <section class="section team">
+      </section> -->
+    <!-- наша команда 4 -->
+    <!-- <section class="section team">
         <div class="container menu-team">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team__list list">
@@ -359,10 +407,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!-- ==============5 Постійні клієнти============ -->
-      <section class="section">
+    <!-- ==============5 Постійні клієнти============ -->
+    <!-- <section class="section">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
           <ul class="list logo__list">
@@ -410,10 +458,10 @@
             </li>
           </ul>
         </div>
-      </section>
-    </main>
+      </section> -->
+    <!-- </main> -->
     <!-- футер -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer__container">
         <div class="footer__logo">
           <a href="./index.html" class="logo">Web<span class="footer__studio">Studio</span></a>
@@ -438,7 +486,7 @@
             </ul>
           </address>
         </div>
-        <!-- ================2 bloc ========== -->
+        ================2 bloc ==========
         <div class="footer__socials">
           <p class="footer__text">приєднуйтесь</p>
           <ul class="list footer-socials__list">
@@ -469,13 +517,13 @@
           </ul>
         </div>
 
-        <!-- =============== 3 bloc ========= -->
+        =============== 3 bloc =========
 
         <div class="footer-search">
           <p class="footer__text">Підпишіться на розсилку</p>
 
-          <!-- action="" -->
-          <form class="footer__mail">
+          action=""
+      <form class="footer__mail">
             <label class="footer-mail__label" for="footer-mail"
               ><input
                 class="footer-mail__input"
@@ -492,11 +540,11 @@
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
-          </form>
-        </div>
+          </form> -->
+    <!-- </div>
       </div>
-    </footer>
-
+    </footer> -->
+    <script src="./js/mobile-menu.js"></script>
     <script src="./modal.js"></script>
   </body>
 </html>
