--- a/index.html
+++ b/index.html
@@ -23,47 +23,51 @@
     <!-- верхня лінія   -->
     <header class="page__header">
       <div class="container nav">
-        <nav class="page__nav">
-          <a href="./index.html" class="logo page__logo"
-            >Web<span class="page__studio">Studio</span></a
-          >
-          <ul class="nav__list list">
-            <li class="nav__item">
-              <a href="./index.html" class="link current nav__link">Студія</a>
+        <div class="nav__container">
+          <nav class="page__nav">
+            <a href="./index.html" class="logo page__logo"
+              >Web<span class="page__studio">Studio</span></a
+            >
+            <ul class="nav__list list">
+              <li class="nav__item">
+                <a href="./index.html" class="link current nav__link">Студія</a>
+              </li>
+              <li class="nav__item">
+                <a href="./portfolio.html" class="link nav__link">Портфоліо</a>
+              </li>
+              <li class="nav__item">
+                <a href="./index.html" class="link nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="contact__list list">
+            <li class="contact__item">
+              <a class="contact__link" href="mailto:info@devstudio.com"
+                ><svg class="contact__icon" width="16px" height="12px">
+                  <use href="./images/icons.svg#icon-envelope"></use></svg
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="nav__item">
-              <a href="./portfolio.html" class="link nav__link">Портфоліо</a>
-            </li>
-            <li class="nav__item">
-              <a href="./index.html" class="link nav__link">Контакти</a>
+            <li class="contact__item">
+              <a class="contact__link" href="tel:+380961111111"
+                ><svg class="contact__icon" width="10px" height="16px">
+                  <use href="./images/icons.svg#icon-mob"></use></svg
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
-        </nav>
-        <ul class="contact__list list">
-          <li class="contact__item">
-            <a class="contact__link" href="mailto:info@devstudio.com"
-              ><svg class="contact__icon" width="16px" height="12px">
-                <use href="./images/icons.svg#icon-envelope"></use></svg
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact__item">
-            <a class="contact__link" href="tel:+380961111111"
-              ><svg class="contact__icon" width="10px" height="16px">
-                <use href="./images/icons.svg#icon-mob"></use></svg
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-        <div class="container mobile__container">
-          <button class="burger__menu" aria-expanded="false" data-menu-button>
-            <svg width="40px" height="40px">
+
+          <button type="button" class="burger__menu" aria-expanded="false" data-menu-open>
+            <svg class="burger__icon">
               <use href="./images/icons.svg#icon-menu"></use>
             </svg>
           </button>
-          <div class="mobile" data-menu>
-            <button>
-              <svg width="40px" height="40px">
+        </div>
+
+        <div class="mobile__menu" data-menu>
+          <div class="container mobile__container">
+            <button type="button" class="close__menu" data-menu-close>
+              <svg class="close__icon">
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
             </button>
