--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
             </button>
-            <div class="mobile__box">
+            <!-- <div class="mobile__box"> -->
               <nav class="mobile__nav">
                 <ul class="mobile__list list">
                   <li class="nav__item">
@@ -86,29 +86,31 @@
                 </ul>
               </nav>
 
-              <ul class="mobile-contact__list list">
-                <li class="contact__item">
-                  <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-                <li class="contact__item">
-                  <a class="mobile-contact__link link" href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
-                </li>
-              </ul>
-              <ul class="mobile__socials">
-                <li class="list mobile__item"><a class="link" href="">Instagram</a></li>
-                <li class="list mobile__item"><a class="link" href="">Twitter</a></li>
-                <li class="list mobile__item"><a class="link" href="">Facebook</a></li>
-                <li class="list mobile__item"><a class="link" href="">LinkedIn</a></li>
-              </ul>
-            </div>
+              <!-- <div> -->
+                <ul class="mobile-contact__list list">
+                  <li class="contact__item">
+                    <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                  </li>
+                  <li class="contact__item">
+                    <a class="mobile-contact__link link" href="mailto:info@devstudio.com"
+                      >info@devstudio.com</a
+                    >
+                  </li>
+                </ul>
+                <ul class="mobile__socials">
+                  <li class="list mobile__item"><a class="link" href="">Instagram</a></li>
+                  <li class="list mobile__item"><a class="link" href="">Twitter</a></li>
+                  <li class="list mobile__item"><a class="link" href="">Facebook</a></li>
+                  <li class="list mobile__item"><a class="link" href="">LinkedIn</a></li>
+                </ul>
+              <!-- </div>
+            </div> -->
           </div>
         </div>
       </div>
     </header>
     <!-- шапка  -->
-    <!-- <main>
+     <main>
       <section class="hero overlay">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -189,8 +191,8 @@
         </div>
       </section>
 
-      особливості 2 
-       <section class="section">
+      <!-- особливості 2  -->
+       <!-- <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="feature__list list">
@@ -242,7 +244,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>  -->
 
     <!-- чим ми займаємось 3-->
     <!-- <section class="section section__sidebar">
