--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
         </div>
 
         <div class="mobile__menu" data-menu>
-          <div class="container mobile__container">
-            <button type="button" class="close__menu" data-menu-close>
+   <div class="container mobile__container">
+                <button type="button" class="close__menu" data-menu-close>
               <svg class="close__icon">
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
             </button>
-            <!-- <div class="mobile__box"> -->
+                   
+                               <div class="mobile__box">
               <nav class="mobile__nav">
                 <ul class="mobile__list list">
                   <li class="nav__item">
@@ -103,8 +104,8 @@
                   <li class="list mobile__item"><a class="link" href="">Facebook</a></li>
                   <li class="list mobile__item"><a class="link" href="">LinkedIn</a></li>
                 </ul>
-              <!-- </div>
-            </div> -->
+              <!-- </div>  -->
+            </div>
           </div>
         </div>
       </div>
