--- a/index.html
+++ b/index.html
@@ -63,16 +63,15 @@
             </svg>
           </button>
         </div>
-
+<!-- мобільне меню  -->
         <div class="mobile__menu" data-menu>
    <div class="container mobile__container">
                 <button type="button" class="close__menu" data-menu-close>
               <svg class="close__icon">
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
-            </button>
-                   
-                               <div class="mobile__box">
+            </button> 
+             <div class="mobile__box">
               <nav class="mobile__nav">
                 <ul class="mobile__list list">
                   <li class="nav__item">
@@ -86,8 +85,6 @@
                   </li>
                 </ul>
               </nav>
-
-              <!-- <div> -->
                 <ul class="mobile-contact__list list">
                   <li class="contact__item">
                     <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -104,7 +101,6 @@
                   <li class="list mobile__item"><a class="link" href="">Facebook</a></li>
                   <li class="list mobile__item"><a class="link" href="">LinkedIn</a></li>
                 </ul>
-              <!-- </div>  -->
             </div>
           </div>
         </div>
@@ -143,7 +139,6 @@
                     <use href="./images/icons.svg#icon-person"></use>
                   </svg>
                 </div>
-
                 <label class="modal-form__label" for="tel">Телефон</label>
                 <div class="modal-form__box">
                   <input class="modal-form__input" type="tel" name="tel" id="tel" required />
@@ -151,7 +146,6 @@
                     <use href="./images/icons.svg#icon-phone-tel"></use>
                   </svg>
                 </div>
-
                 <label class="modal-form__label" for="mail">Ім'я</label>
                 <div class="modal-form__box">
                   <input class="modal-form__input" type="email" name="mail" id="mail" required />
@@ -159,7 +153,6 @@
                     <use href="./images/icons.svg#icon-email-modal"></use>
                   </svg>
                 </div>
-
                 <label class="modal-form__label" for="comment">Коментар</label>
                 <textarea
                   class="modal-form__comment modal-form__input"
@@ -170,7 +163,6 @@
                   placeholder="Введіть текст"
                 ></textarea>
               </div>
-
               <div class="checkbox">
                 <label class="checkbox__label"
                   ><input class="checkbox__input" type="checkbox" name="checkbox" required /><span
@@ -185,7 +177,6 @@
                   <a class="checkbox__link" href="#"> Умови договору </a></label
                 >
               </div>
-
               <button class="modal__button" type="submit">Відправити</button>
             </form>
           </div>
