--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </section>
 
       <!-- особливості 2  -->
-       <!-- <section class="section">
+        <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="feature__list list">
@@ -196,7 +196,7 @@
               </div>
               <h3 class="feature__title">Увага до деталей</h3>
               <p class="feature__text">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування <br />
+                Ідейні міркування, і навіть початок повсякденної роботи з формування 
                 позиції.
               </p>
             </li>
@@ -230,16 +230,16 @@
               </div>
               <h3 class="feature__title">Сучасні технології</h3>
               <p class="feature__text">
-                Значимість цих проблем настільки очевидна, що реалізація планових <br />
+                Значимість цих проблем настільки очевидна, що реалізація планових 
                 завдань.
               </p>
             </li>
           </ul>
         </div>
-      </section>  -->
+      </section> 
 
     <!-- чим ми займаємось 3-->
-    <!-- <section class="section section__sidebar">
+     <section class="section section__sidebar">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="list image__list">
@@ -263,7 +263,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
     <!-- наша команда 4 -->
     <!-- <section class="section team">
         <div class="container menu-team">
