--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
             </svg>
           </button>
         </div>
-
+        <!-- мобільне меню  -->
         <div class="mobile__menu" data-menu>
           <div class="container mobile__container">
             <button type="button" class="close__menu" data-menu-close>
@@ -69,40 +69,37 @@
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
             </button>
-            <ul class="mobile__list list">
-              <li class="nav__item">
-                <a href="./index.html" class="link nav__link">Студія</a>
-              </li>
-              <li class="nav__item">
-                <a href="./portfolio.html" class="link current nav__link">Портфоліо</a>
-              </li>
-              <li class="nav__item">
-                <a href="./index.html" class="link nav__link">Контакти</a>
-              </li>
-            </ul>
-
-            <ul class="mobile__list list">
-              <li class="contact__item">
-                <a class="contact__link" href="mailto:info@devstudio.com"
-                  ><svg class="contact__icon" width="16px" height="12px">
-                    <use href="./images/icons.svg#icon-envelope"></use></svg
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="contact__item">
-                <a class="contact__link" href="tel:+380961111111"
-                  ><svg class="contact__icon" width="10px" height="16px">
-                    <use href="./images/icons.svg#icon-mob"></use></svg
-                  >+38 096 111 11 11</a
-                >
-              </li>
-            </ul>
-            <ul>
-              <li class="list"><a class="link" href="">Instagram</a></li>
-              <li class="list"><a class="link" href="">Twitter</a></li>
-              <li class="list"><a class="link" href="">Facebook</a></li>
-              <li class="list"><a class="link" href="">LinkedIn</a></li>
-            </ul>
+            <div class="mobile__box">
+              <nav class="mobile__nav">
+                <ul class="mobile__list list">
+                  <li class="nav__item">
+                    <a href="./index.html" class="link nav__link">Студія</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="./portfolio.html" class="link current nav__link">Портфоліо</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="./index.html" class="link nav__link">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+              <ul class="mobile-contact__list list">
+                <li class="contact__item">
+                  <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+                <li class="contact__item">
+                  <a class="mobile-contact__link link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="mobile__socials">
+                <li class="list mobile__item"><a class="link" href="">Instagram</a></li>
+                <li class="list mobile__item"><a class="link" href="">Twitter</a></li>
+                <li class="list mobile__item"><a class="link" href="">Facebook</a></li>
+                <li class="list mobile__item"><a class="link" href="">LinkedIn</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
