--- a/index.html
+++ b/index.html
@@ -245,19 +245,20 @@
           <ul class="list image__list">
             <li class="image__item">
               <div class="inner">
-                <img src="./images/img.jpg" alt="HTML-розмітка всіх елементів макета" width="370" />
+                <img srcset="./desktop/img@2x.jpg 2x"
+                src="./desktop/img.jpg" alt="HTML-розмітка всіх елементів макета" />
                 <p class="inner__text">Десктопні додатки</p>
               </div>
             </li>
             <li class="image__item">
               <div class="inner">
-                <img src="./images/css.jpg" alt="CSS оформлення зовнішній вигляд." width="370" />
+                <img srcset="./desktop/css@2x.jpg 2x" src="./desktop/css1x.jpg" alt="CSS оформлення зовнішній вигляд." width="370" />
                 <p class="inner__text">Мобільні додатки</p>
               </div>
             </li>
             <li class="image__item">
               <div class="inner">
-                <img src="./images/js.jpg" alt="завдаєм кольори" width="370" />
+                <img srcset="./desktop/js@2x.jpg 2x" src="./desktop/js.1x.jpg" alt="задаєм кольори" width="370" />
                 <p class="inner__text">Дизайнерські рішення</p>
               </div>
             </li>
