--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             </svg>
           </button>
         </div>
-<!-- мобільне меню  -->
+        <!-- мобільне меню  -->
         <div class="mobile__menu" data-menu>
-   <div class="container mobile__container">
-                <button type="button" class="close__menu" data-menu-close>
+          <div class="container mobile__container">
+            <button type="button" class="close__menu" data-menu-close>
               <svg class="close__icon">
                 <use href="./images/icons.svg#icon-close"></use>
               </svg>
-            </button> 
-             <div class="mobile__box">
+            </button>
+            <div class="mobile__box">
               <nav class="mobile__nav">
                 <ul class="mobile__list list">
                   <li class="nav__item">
@@ -85,29 +85,29 @@
                   </li>
                 </ul>
               </nav>
-                <ul class="mobile-contact__list list">
-                  <li class="contact__item">
-                    <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
-                  </li>
-                  <li class="contact__item">
-                    <a class="mobile-contact__link link" href="mailto:info@devstudio.com"
-                      >info@devstudio.com</a
-                    >
-                  </li>
-                </ul>
-                <ul class="mobile__socials">
-                  <li class="list mobile__item"><a class="link" href="">Instagram</a></li>
-                  <li class="list mobile__item"><a class="link" href="">Twitter</a></li>
-                  <li class="list mobile__item"><a class="link" href="">Facebook</a></li>
-                  <li class="list mobile__item"><a class="link" href="">LinkedIn</a></li>
-                </ul>
+              <ul class="mobile-contact__list list">
+                <li class="contact__item">
+                  <a class="contact__link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+                <li class="contact__item">
+                  <a class="mobile-contact__link link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="mobile__socials">
+                <li class="list mobile__item"><a class="link" href="">Instagram</a></li>
+                <li class="list mobile__item"><a class="link" href="">Twitter</a></li>
+                <li class="list mobile__item"><a class="link" href="">Facebook</a></li>
+                <li class="list mobile__item"><a class="link" href="">LinkedIn</a></li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </header>
     <!-- шапка  -->
-     <main>
+    <main>
       <section class="hero overlay">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -184,7 +184,7 @@
       </section>
 
       <!-- особливості 2  -->
-        <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="feature__list list">
@@ -196,8 +196,7 @@
               </div>
               <h3 class="feature__title">Увага до деталей</h3>
               <p class="feature__text">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування 
-                позиції.
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="feature__item">
@@ -230,54 +229,74 @@
               </div>
               <h3 class="feature__title">Сучасні технології</h3>
               <p class="feature__text">
-                Значимість цих проблем настільки очевидна, що реалізація планових 
-                завдань.
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
           </ul>
         </div>
-      </section> 
+      </section>
 
-    <!-- чим ми займаємось 3-->
-     <section class="section section__sidebar">
+      <!-- чим ми займаємось 3-->
+      <section class="section section__sidebar">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="list image__list">
             <li class="image__item">
               <div class="inner">
-                <img srcset="./desktop/img@2x.jpg 2x"
-                src="./desktop/img.jpg" alt="HTML-розмітка всіх елементів макета" />
+                <img
+                  srcset="./desktop/img@2x.jpg 2x"
+                  src="./desktop/img.jpg"
+                  alt="HTML-розмітка всіх елементів макета"
+                />
                 <p class="inner__text">Десктопні додатки</p>
               </div>
             </li>
             <li class="image__item">
               <div class="inner">
-                <img srcset="./desktop/css@2x.jpg 2x" src="./desktop/css1x.jpg" alt="CSS оформлення зовнішній вигляд." width="370" />
+                <img
+                  srcset="./desktop/css@2x.jpg 2x"
+                  src="./desktop/css1x.jpg"
+                  alt="CSS оформлення зовнішній вигляд."
+                  width="370"
+                />
                 <p class="inner__text">Мобільні додатки</p>
               </div>
             </li>
             <li class="image__item">
               <div class="inner">
-                <img srcset="./desktop/js@2x.jpg 2x" src="./desktop/js.1x.jpg" alt="задаєм кольори" width="370" />
+                <img
+                  srcset="./desktop/js@2x.jpg 2x"
+                  src="./desktop/js.1x.jpg"
+                  alt="задаєм кольори"
+                  width="370"
+                />
                 <p class="inner__text">Дизайнерські рішення</p>
               </div>
             </li>
           </ul>
         </div>
-      </section> 
-    <!-- наша команда 4 -->
-     <section class="section team">
+      </section>
+      <!-- наша команда 4 -->
+      <section class="section team">
         <div class="container menu-team">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__item">
-
               <picture>
-                <source srcset="./desktop/product-d.jpg 1x, ./desktop/product-d@2x.jpg 2x " media="(min-width: 1200px)">
-                <source srcset="./tablet/product-t.jpg 1x, ./tablet/product-t@2x.jpg 2x " media="(min-width: 768px)">
-                <source srcset="./mobile/product-m.jpg 1x, ./mobile/product-m@2x.jpg 2x " media="(max-width: 767px)">
-                
-              <img src="./mobile/product-m.jpg" alt="Product Designer"  />
+                <source
+                  srcset="./desktop/product-d.jpg 1x, ./desktop/product-d@2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./tablet/product-t.jpg 1x, ./tablet/product-t@2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./mobile/product-m.jpg 1x, ./mobile/product-m@2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+
+                <img src="./mobile/product-m.jpg" alt="Product Designer" />
               </picture>
               <div class="aside">
                 <h3 class="team__title">Ігор Дем'яненко</h3>
@@ -311,12 +330,20 @@
               </div>
             </li>
             <li class="team__item">
-
-               <picture>
-                <source srcset="./desktop/frontend.jpg 1x, ./desktop/frontend@2x.jpg 2x " media="(min-width: 1200px)">
-                <source srcset="./tablet/frontend-t.jpg 1x, ./tablet/frontend-t@2x.jpg 2x " media="(min-width: 768px)">
-                <source srcset="./mobile/frontend-m.jpg 1x, ./mobile/frontend-m@2x.jpg 2x " media="(max-width: 767px)">
-              <img src="./mobile/frontend-m.jpg" alt="Frontend Developer"  />
+              <picture>
+                <source
+                  srcset="./desktop/frontend.jpg 1x, ./desktop/frontend@2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./tablet/frontend-t.jpg 1x, ./tablet/frontend-t@2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./mobile/frontend-m.jpg 1x, ./mobile/frontend-m@2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img src="./mobile/frontend-m.jpg" alt="Frontend Developer" />
               </picture>
               <div class="aside">
                 <h3 class="team__title">Ольга Рєпіна</h3>
@@ -350,12 +377,20 @@
               </div>
             </li>
             <li class="team__item">
-
-                   <picture>
-                <source srcset="./desktop/marketing.jpg 1x, ./desktop/marketing@2x.jpg 2x " media="(min-width: 1200px)">
-                <source srcset="./tablet/marketing-t.jpg 1x, ./tablet/marketing-t@2x.jpg 2x " media="(min-width: 768px)">
-                <source srcset="./mobile/marketing-m.jpg 1x, ./mobile/marketing-m@2x.jpg 2x " media="(max-width: 767px)">
-              <img src="./mobile/marketing-m.jpg" alt="Marketing" />
+              <picture>
+                <source
+                  srcset="./desktop/marketing.jpg 1x, ./desktop/marketing@2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./tablet/marketing-t.jpg 1x, ./tablet/marketing-t@2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./mobile/marketing-m.jpg 1x, ./mobile/marketing-m@2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img src="./mobile/marketing-m.jpg" alt="Marketing" />
               </picture>
               <div class="aside">
                 <h3 class="team__title">Микола Тарасов</h3>
@@ -389,12 +424,20 @@
               </div>
             </li>
             <li class="team__item">
-
-                    <picture>
-                <source srcset="./desktop/designer.jpg 1x, ./desktop/designer@2x.jpg 2x " media="(min-width: 1200px)">
-                <source srcset="./tablet/designer-t.jpg 1x, ./tablet/designer-t@2x.jpg 2x " media="(min-width: 768px)">
-                <source srcset="./mobile/designer-m.jpg 1x, ./mobile/designer-m@2x.jpg 2x " media="(max-width: 767px)">
-              <img src="./mobile/designer-m.jpg" alt="UI Designer" />
+              <picture>
+                <source
+                  srcset="./desktop/designer.jpg 1x, ./desktop/designer@2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./tablet/designer-t.jpg 1x, ./tablet/designer-t@2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./mobile/designer-m.jpg 1x, ./mobile/designer-m@2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img src="./mobile/designer-m.jpg" alt="UI Designer" />
               </picture>
               <div class="aside">
                 <h3 class="team__title">Михайло Єрмаков</h3>
@@ -431,8 +474,8 @@
         </div>
       </section>
 
-    <!-- ==============5 Постійні клієнти============ -->
-    <!-- <section class="section">
+      <!-- ==============5 Постійні клієнти============ -->
+      <section class="section">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
           <ul class="list logo__list">
@@ -480,10 +523,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
-    <!-- </main> -->
+      </section>
+    </main>
     <!-- футер -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer__container">
         <div class="footer__logo">
           <a href="./index.html" class="logo">Web<span class="footer__studio">Studio</span></a>
@@ -508,7 +551,7 @@
             </ul>
           </address>
         </div>
-        ================2 bloc ==========
+        <!-- ================2 bloc ========== -->
         <div class="footer__socials">
           <p class="footer__text">приєднуйтесь</p>
           <ul class="list footer-socials__list">
@@ -539,13 +582,12 @@
           </ul>
         </div>
 
-        =============== 3 bloc =========
+        <!-- =============== 3 bloc ========= -->
 
         <div class="footer-search">
           <p class="footer__text">Підпишіться на розсилку</p>
 
-          action=""
-      <form class="footer__mail">
+          <form class="footer__mail">
             <label class="footer-mail__label" for="footer-mail"
               ><input
                 class="footer-mail__input"
@@ -562,10 +604,10 @@
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
-          </form> -->
-    <!-- </div>
+          </form>
+        </div>
       </div>
-    </footer> -->
+    </footer>
     <script src="./js/mobile-menu.js"></script>
     <script src="./modal.js"></script>
   </body>
