--- a/portfolio.html
+++ b/portfolio.html
@@ -304,66 +304,66 @@
 
     <footer class="footer">
       <div class="container footer__container">
-        <div class="footer__logo">
-          <a href="./index.html" class="logo">Web<span class="footer__studio">Studio</span></a>
+        <div class="footer-container__box">
+          <div class="footer__logo">
+            <a href="./index.html" class="logo">Web<span class="footer__studio">Studio</span></a>
 
-          <address class="footer-nav">
-            <ul class="list footer__list">
-              <li class="footer__item">
-                <a
-                  class="footer__nav"
-                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
+            <address class="footer-nav">
+              <ul class="list footer__list">
+                <li class="footer__item">
+                  <a
+                    class="footer__nav"
+                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="telto:+380961111111">+38 099 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <!-- ================2 bloc ========== -->
+          <div class="footer__socials">
+            <p class="footer__text">приєднуйтесь</p>
+            <ul class="list footer-socials__list">
+              <li class="footer-socials__item">
+                <a class="footer-socials__link" href=""
+                  ><svg class="footer-socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use></svg
+                ></a>
               </li>
-              <li class="footer__item">
-                <a class="footer__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <li class="footer-socials__item">
+                <a class="footer-socials__link" href=""
+                  ><svg class="footer-socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use></svg
+                ></a>
               </li>
-              <li class="footer__item">
-                <a class="footer__link" href="telto:+380961111111">+38 099 111 11 11</a>
+              <li class="footer-socials__item">
+                <a class="footer-socials__link" href=""
+                  ><svg class="footer-socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+              </li>
+              <li class="footer-socials__item">
+                <a class="footer-socials__link" href=""
+                  ><svg class="footer-socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use></svg
+                ></a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
-        <!-- ================2 bloc ========== -->
-        <div class="footer__socials">
-          <p class="footer__text">приєднуйтесь</p>
-          <ul class="list footer-socials__list">
-            <li class="footer-socials__item">
-              <a class="footer-socials__link" href=""
-                ><svg class="footer-socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use></svg
-              ></a>
-            </li>
-            <li class="footer-socials__item">
-              <a class="footer-socials__link" href=""
-                ><svg class="footer-socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use></svg
-              ></a>
-            </li>
-            <li class="footer-socials__item">
-              <a class="footer-socials__link" href=""
-                ><svg class="footer-socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use></svg
-              ></a>
-            </li>
-            <li class="footer-socials__item">
-              <a class="footer-socials__link" href=""
-                ><svg class="footer-socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use></svg
-              ></a>
-            </li>
-          </ul>
-        </div>
-
         <!-- =============== 3 bloc ========= -->
 
         <div class="footer-search">
           <p class="footer__text">Підпишіться на розсилку</p>
 
-          <!-- action="" -->
           <form class="footer__mail">
             <label class="footer-mail__label" for="footer-mail"
               ><input
