--- a/portfolio.html
+++ b/portfolio.html
@@ -403,8 +403,8 @@
                   <picture>
                     <source
                       srcset="
-                        ./images/projects/boxes/img-desktop.webp   1x,
-                        ./images/projects/boxes/img-desktop@x.webp 2x
+                        ./images/projects/boxes/img-desktop.webp    1x,
+                        ./images/projects/boxes/img-desktop@2x.webp 2x
                       "
                       media="(min-width: 1200px)"
                       type="image/webp"
