--- a/index.html
+++ b/index.html
@@ -173,8 +173,11 @@
                         href="./images/icons.svg#icon-icon-check"
                       ></use></svg
                   ></span>
-                  Погоджуюся з розсилкою та приймаю &nbsp;
-                  <a class="checkbox__link" href="#"> Умови договору </a></label
+                  <span>
+                    Погоджуюся з розсилкою та приймаю &nbsp;<a class="checkbox__link" href="#"
+                      >Умови договору</a
+                    ></span
+                  ></label
                 >
               </div>
               <button class="modal__button" type="submit">Відправити</button>
