--- a/portfolio.html
+++ b/portfolio.html
@@ -232,7 +232,7 @@
                     <source
                       srcset="
                         ./images/projects/new-orlean-golden-star/img-mobile.webp    1x,
-                        ./images/projects/new-orlean-golden-star/img-mobile@2x.webp 1x
+                        ./images/projects/new-orlean-golden-star/img-mobile@2x.webp 2x
                       "
                       media="(max-width: 767px)"
                       type="image/webp"
@@ -240,7 +240,7 @@
                     <source
                       srcset="
                         ./images/projects/new-orlean-golden-star/img-mobile.jpg    1x,
-                        ./images/projects/new-orlean-golden-star/img-mobile@2x.jpg
+                        ./images/projects/new-orlean-golden-star/img-mobile@2x.jpg 2x
                       "
                       media="(max-width: 767px)"
                     />
